Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22125

QDeclarativeViewer crashes on shutdown asynchronous is activated for Image and the worker thread did not finish, yet.

XMLWordPrintable

    • 32e931b40edf 328d1d2fd6cba7368230a1232e080d3f3310a7f1

      QDeclarativeViewer crashes on shutdown asynchronous is activated for Image and the worker thread did not finish, yet.

      This only leads to a crash if some kind of memory protection is enabled (e.g. debug mode on Windows, MallocScribble on Mac).

      For details see: QTCREATORBUG-6219

      stack trace:

      QtCored4.dll!QMutex::lock() Line 151 + 0x5 bytes C++
      QtDeclaratived4.dll!QDeclarativePixmapReader::cancel(QDeclarativePixmapReply * reply=0x0e648540) Line 527 C++
      QtDeclaratived4.dll!QDeclarativePixmapData::release() Line 754 C++
      QtDeclaratived4.dll!QDeclarativePixmap::~QDeclarativePixmap() Line 864 C++
      QtDeclaratived4.dll!QDeclarativeImageBasePrivate::~QDeclarativeImageBasePrivate() + 0x44 bytes C++
      QtDeclaratived4.dll!QDeclarativeImagePrivate::~QDeclarativeImagePrivate() + 0xf bytes C++
      QtDeclaratived4.dll!QDeclarativeImagePrivate::`scalar deleting destructor'() + 0xf bytes C++
      QtGuid4.dll!QScopedPointerDeleter<QGraphicsItemPrivate>::cleanup(QGraphicsItemPrivate * pointer=0x0ef650c0) Line 62 + 0x20 bytes C++
      QtGuid4.dll!QScopedPointer<QGraphicsItemPrivate,QScopedPointerDeleter<QGraphicsItemPrivate> >::~QScopedPointer<QGraphicsItemPrivate,QScopedPointerDeleter<QGraphicsItemPrivate> >()
      QtGuid4.dll!QGraphicsItem::~QGraphicsItem() Line 1513 + 0x15 bytes C++
      QtGuid4.dll!QGraphicsObject::~QGraphicsObject() + 0x2e bytes C++
      QtDeclaratived4.dll!QDeclarativeItem::~QDeclarativeItem() Line 1685 + 0x1f bytes C++
      QtDeclaratived4.dll!QDeclarativeImplicitSizeItem::~QDeclarativeImplicitSizeItem() + 0xf bytes C++
      QtDeclaratived4.dll!QDeclarativeImageBase::~QDeclarativeImageBase() Line 63 + 0x8 bytes C++
      QtDeclaratived4.dll!QDeclarativeImage::~QDeclarativeImage() Line 118 + 0x8 bytes C++
      QtDeclaratived4.dll!QDeclarativePrivate::QDeclarativeElement<QDeclarativeImage>::~QDeclarativeElement<QDeclarativeImage>() Line 87 + 0xf bytes C++
      QtDeclaratived4.dll!QDeclarativePrivate::QDeclarativeElement<QDeclarativeImage>::`scalar deleting destructor'() + 0xf bytes C++
      QtGuid4.dll!QGraphicsItem::~QGraphicsItem() Line 1488 + 0x39 bytes C++
      QtGuid4.dll!QGraphicsObject::~QGraphicsObject() + 0x2e bytes C++
      QtDeclaratived4.dll!QDeclarativeItem::~QDeclarativeItem() Line 1685 + 0x1f bytes C++
      QtDeclaratived4.dll!QDeclarativeRectangle::~QDeclarativeRectangle() + 0xf bytes C++
      QtDeclaratived4.dll!QDeclarativePrivate::QDeclarativeElement<QDeclarativeRectangle>::~QDeclarativeElement<QDeclarativeRectangle>() Line 87 + 0xf bytes C++
      QtDeclaratived4.dll!QDeclarativePrivate::QDeclarativeElement<QDeclarativeRectangle>::`scalar deleting destructor'() + 0xf bytes C++
      QtGuid4.dll!QGraphicsItem::~QGraphicsItem() Line 1488 + 0x39 bytes C++
      QtGuid4.dll!QGraphicsObject::~QGraphicsObject() + 0x2e bytes C++
      QtDeclaratived4.dll!QDeclarativeItem::~QDeclarativeItem() Line 1685 + 0x1f bytes C++
      QtDeclaratived4.dll!QDeclarativePrivate::QDeclarativeElement<QDeclarativeItem>::~QDeclarativeElement<QDeclarativeItem>() Line 87 + 0xf bytes C++
      QtDeclaratived4.dll!QDeclarativePrivate::QDeclarativeElement<QDeclarativeItem>::`scalar deleting destructor'() + 0xf bytes C++
      QtCored4.dll!qDeleteInEventHandler(QObject * o=0x0f1ad8d8) Line 3986 + 0x21 bytes C++
      QtCored4.dll!QObject::event(QEvent * e=0x0e8a8b50) Line 1200 + 0xc bytes C++
      QtDeclaratived4.dll!QDeclarativeItem::event(QEvent * ev=0x0e8a8b50) Line 3651 C++

        1. imagecrash.pro
          0.1 kB
          Christopher Adams (closed Nokia identity)
        2. imagecrash11.diff
          11 kB
          Christopher Adams (closed Nokia identity)
        3. imagecrash3.diff
          11 kB
          Christopher Adams (closed Nokia identity)
        4. imagecrash6.diff
          5 kB
          Christopher Adams (closed Nokia identity)
        5. main.cpp
          0.4 kB
          Thomas Hartmann
        6. main.cpp
          0.4 kB
          Christopher Adams (closed Nokia identity)
        7. test.qml
          1 kB
          Thomas Hartmann
        8. test.qml
          0.9 kB
          Christopher Adams (closed Nokia identity)
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            chriadam Christopher Adams (closed Nokia identity) (Inactive)
            thohartm Thomas Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes